--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,15 @@ on:
   push:
     tags:
       - '**'
+    branches:
+      - main
   pull_request:
 
 jobs:
     linux:
         name: Linux Build
         runs-on: ubuntu-24.04
+        permissions: write-all
         strategy:
             fail-fast: false
             matrix:
@@ -18,8 +21,16 @@ jobs:
                 -   MinSizeRel
                 -   RelWithDebInfo
                 -   Release
-
         steps:
+        - name: Maximize build space
+          uses: AdityaGarg8/remove-unwanted-software@v4.1
+          with:
+            remove-android: 'true'
+            remove-dotnet: 'true'
+            remove-haskell: 'true'
+            remove-codeql: 'true'
+            remove-docker-images: 'true'
+            remove-cached-tools: 'true'
         - name: Checkout repo
           uses: actions/checkout@v4
         - name: Install dependencies
@@ -28,9 +39,18 @@ jobs:
           run: ./build
           env:
             CMAKE_BUILD_TYPE: ${{matrix.CMAKE_BUILD_TYPE}}
+            LLVM_RELEASE_BASENAME: llvm-${{env.LLVM_VERSION}}-x86_64-linux-${{matrix.CMAKE_BUILD_TYPE}}
+        - name: Release
+          uses: softprops/action-gh-release@v2
+          if: startsWith(github.ref, 'refs/tags/')
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            files: ${{steps.BUILD.outputs.DEPLOY_FILE}}
     macos:
         name: MacOS Build
         runs-on: macos-15
+        permissions: write-all
         strategy:
             fail-fast: false
             matrix:
@@ -39,7 +59,6 @@ jobs:
                 -   MinSizeRel
                 -   RelWithDebInfo
                 -   Release
-
         steps:
         - name: Checkout repo
           uses: actions/checkout@v4
@@ -49,5 +68,11 @@ jobs:
           run: ./build
           env:
             CMAKE_BUILD_TYPE: ${{matrix.CMAKE_BUILD_TYPE}}
-
-
+            LLVM_RELEASE_BASENAME: llvm-${{env.LLVM_VERSION}}-aarch64-macos-${{matrix.CMAKE_BUILD_TYPE}}
+        - name: Release
+          uses: softprops/action-gh-release@v2
+          if: startsWith(github.ref, 'refs/tags/')
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            files: ${{steps.BUILD.outputs.DEPLOY_FILE}}
