--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
     outputs:
       BIRTH_GITHUB_TARGETS: ${{ steps.generate-config.outputs.BIRTH_GITHUB_TARGETS }}
       BIRTH_CMAKE_BUILD_TYPES: ${{ steps.generate-config.outputs.BIRTH_CMAKE_BUILD_TYPES }}
+      BIRTH_LINUX_IMAGE: ${{ steps.generate-config.outputs.BIRTH_LINUX_IMAGE }}
+      BIRTH_WINDOWS_IMAGE: ${{ steps.generate-config.outputs.BIRTH_WINDOWS_IMAGE }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -32,7 +34,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       INSTALL_DIRECTORY: llvm
+      BIRTH_LINUX_IMAGE: ${{ needs.generate-config.outputs.BIRTH_LINUX_IMAGE }}
+      BIRTH_WINDOWS_IMAGE: ${{ needs.generate-config.outputs.BIRTH_WINDOWS_IMAGE }}
     steps:
+      - name: Maximize build space
+        if: matrix.os == env.BIRTH_LINUX_IMAGE
+        uses: AdityaGarg8/remove-unwanted-software@v4.1
+        with:
+          remove-android: 'true'
+          remove-dotnet: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
+          remove-large-packages: 'true'
+          remove-cached-tools: 'true'
+          remove-swapfile: 'true'
       - uses: actions/checkout@v4
       - uses: birth-software/github-setup@v2
       - name: Build
@@ -81,6 +97,7 @@ jobs:
           -DLLVM_ENABLE_PLUGINS=OFF \
           -DLLVM_ENABLE_TERMINFO=OFF \
           -DLLVM_ENABLE_Z3_SOLVER=OFF \
+          -DLLVM_ENABLE_ZSTD=OFF \
           -DLLVM_INCLUDE_UTILS=OFF \
           -DLLVM_INCLUDE_TESTS=OFF \
           -DLLVM_INCLUDE_EXAMPLES=OFF \
@@ -92,3 +109,42 @@ jobs:
           -DLLVM_TOOL_REMARKS_SHLIB_BUILD=OFF
           cmake --build . --target install
           cd $ROOT_DIR
+
+          LLVM_BASENAME=llvm-$BIRTH_ARCH-$BIRTH_OS-${{ matrix.CMAKE_BUILD_TYPE }}
+          7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on $LLVM_BASENAME.7z $INSTALL_DIRECTORY_PATH
+          b2sum $LLVM_BASENAME.7z > "$LLVM_BASENAME.7z.b2sum"
+          cat "$LLVM_BASENAME.7z.b2sum"
+          LLVM_ASSET_BASE_PATH="$(pwd)/$LLVM_BASENAME"
+          case "$BIRTH_OS" in
+            windows) LLVM_ASSET_BASE_PATH="$(cygpath -w ${LLVM_ASSET_BASE_PATH})" ;;
+            *) ;;
+          esac
+            
+          echo "LLVM_ASSET_BASE_PATH=$LLVM_ASSET_BASE_PATH" >> $GITHUB_ENV
+          echo "LLVM_BASENAME=$LLVM_BASENAME" >> $GITHUB_ENV
+
+      - name: Upload LLVM artifact (7z)
+        uses: actions/upload-artifact@v4
+        with:
+          # Name of the artifact to upload.
+          # Optional. Default is 'artifact'
+          name: ${{env.LLVM_BASENAME}}.7z
+          # A file, directory or wildcard pattern that describes what to upload
+          # Required.
+          path: ${{env.LLVM_ASSET_BASE_PATH}}.7z
+          compression-level: 9
+          overwrite: true
+          if-no-files-found: 'error'
+      - name: Upload LLVM artifact (b2sum)
+        uses: actions/upload-artifact@v4
+        with:
+          # Name of the artifact to upload.
+          # Optional. Default is 'artifact'
+          name: ${{env.LLVM_BASENAME}}.7z.b2sum
+          # A file, directory or wildcard pattern that describes what to upload
+          # Required.
+          path: ${{env.LLVM_ASSET_BASE_PATH}}.7z.b2sum
+          compression-level: 9
+          overwrite: true
+          if-no-files-found: 'error'
+
