--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,6 +147,15 @@ jobs:
           compression-level: 9
           overwrite: true
           if-no-files-found: 'error'
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: |
+            ${{env.LLVM_BASENAME}}.7z
+            ${{env.LLVM_BASENAME}}.7z.b2sum
   build_lld:
     needs: [generate-config, build_llvm]
     permissions: write-all
@@ -226,3 +235,50 @@ jobs:
           -DLLVM_TOOL_REMARKS_SHLIB_BUILD=OFF
           cmake --build . --target install
           cd $ROOT_DIR
+
+          LLD_BASENAME=lld-$BIRTH_ARCH-$BIRTH_OS-${{ matrix.CMAKE_BUILD_TYPE }}
+          7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on $LLD_BASENAME.7z $INSTALL_DIRECTORY_PATH
+          b2sum $LLD_BASENAME.7z > "$LLD_BASENAME.7z.b2sum"
+          cat "$LLD_BASENAME.7z.b2sum"
+          LLD_ASSET_BASE_PATH="$(pwd)/$LLD_BASENAME"
+          case "$BIRTH_OS" in
+            windows) LLD_ASSET_BASE_PATH="$(cygpath -w ${LLD_ASSET_BASE_PATH})" ;;
+            *) ;;
+          esac
+            
+          echo "LLD_ASSET_BASE_PATH=$LLD_ASSET_BASE_PATH" >> $GITHUB_ENV
+          echo "LLD_BASENAME=$LLD_BASENAME" >> $GITHUB_ENV
+
+      - name: Upload LLD artifact (7z)
+        uses: actions/upload-artifact@v4
+        with:
+          # Name of the artifact to upload.
+          # Optional. Default is 'artifact'
+          name: ${{env.LLD_BASENAME}}.7z
+          # A file, directory or wildcard pattern that describes what to upload
+          # Required.
+          path: ${{env.LLD_ASSET_BASE_PATH}}.7z
+          compression-level: 9
+          overwrite: true
+          if-no-files-found: 'error'
+      - name: Upload LLD artifact (b2sum)
+        uses: actions/upload-artifact@v4
+        with:
+          # Name of the artifact to upload.
+          # Optional. Default is 'artifact'
+          name: ${{env.LLD_BASENAME}}.7z.b2sum
+          # A file, directory or wildcard pattern that describes what to upload
+          # Required.
+          path: ${{env.LLD_ASSET_BASE_PATH}}.7z.b2sum
+          compression-level: 9
+          overwrite: true
+          if-no-files-found: 'error'
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: |
+            ${{env.LLD_BASENAME}}.7z
+            ${{env.LLD_BASENAME}}.7z.b2sum
