--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          set -ex
+          set -eux
           ROOT_DIR=$(pwd)
           LLVM_BASENAME=llvm-$BIRTH_ARCH-$BIRTH_OS-${{ matrix.CMAKE_BUILD_TYPE }}
           INSTALL_DIRECTORY_PATH=$ROOT_DIR/$LLVM_BASENAME
@@ -99,9 +99,9 @@ jobs:
           -DLLVM_ENABLE_TERMINFO=OFF \
           -DLLVM_ENABLE_Z3_SOLVER=OFF \
           -DLLVM_ENABLE_ZSTD=OFF \
-          -DLLVM_INSTALL_TOOLCHAIN_ONLY=ON \
           -DLLVM_BUILD_UTILS=OFF \
           -DLLVM_BUILD_TOOLS=OFF \
+          -DLLVM_INCLUDE_TOOLS=ON \
           -DLLVM_INCLUDE_UTILS=OFF \
           -DLLVM_INCLUDE_TESTS=OFF \
           -DLLVM_INCLUDE_EXAMPLES=OFF \
@@ -111,13 +111,18 @@ jobs:
           -DLLVM_TOOL_LLVM_LTO_BUILD=OFF \
           -DLLVM_TOOL_LTO_BUILD=OFF \
           -DLLVM_TOOL_REMARKS_SHLIB_BUILD=OFF
-          cmake --build . --target install
+          cmake --build . --target llvm-config llvm-tblgen install
           cd $ROOT_DIR
 
           case "$BIRTH_OS" in
             windows) EXE_EXTENSION=".exe";;
             *) EXE_EXTENSION="";;
           esac
+
+          # Install manually just these couple exes
+          mkdir -p $INSTALL_DIRECTORY_PATH/bin
+          cp build-llvm/bin/llvm-config$EXE_EXTENSION $INSTALL_DIRECTORY_PATH/bin
+          cp build-llvm/bin/llvm-tblgen$EXE_EXTENSION $INSTALL_DIRECTORY_PATH/bin
 
           7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on $LLVM_BASENAME.7z $INSTALL_DIRECTORY_PATH
           b2sum $LLVM_BASENAME.7z > "$LLVM_BASENAME.7z.b2sum"
@@ -200,7 +205,7 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          set -ex
+          set -eux
           ls -lasR
           ROOT_DIR=$(pwd)
           LLD_BASENAME=lld-$BIRTH_ARCH-$BIRTH_OS-${{ matrix.CMAKE_BUILD_TYPE }}
