Update to configs v5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,16 @@ jobs:
     outputs:
       BIRTH_GITHUB_TARGETS: ${{ steps.generate-config.outputs.BIRTH_GITHUB_TARGETS }}
       BIRTH_CMAKE_BUILD_TYPES: ${{ steps.generate-config.outputs.BIRTH_CMAKE_BUILD_TYPES }}
-      BIRTH_MACOS_IMAGE: ${{ steps.generate-config.outputs.BIRTH_LINUX_IMAGE }}
-      BIRTH_ORACLE_LINUX_IMAGE: ${{ steps.generate-config.outputs.BIRTH_ORACLE_LINUX_IMAGE }}
-      BIRTH_LINUX_IMAGE: ${{ steps.generate-config.outputs.BIRTH_LINUX_IMAGE }}
-      BIRTH_WINDOWS_IMAGE: ${{ steps.generate-config.outputs.BIRTH_WINDOWS_IMAGE }}
+      BIRTH_MACOS_AARCH64: ${{ steps.generate-config.outputs.BIRTH_MACOS_AARCH64 }}
+      BIRTH_LINUX_AARCH64: ${{ steps.generate-config.outputs.BIRTH_LINUX_AARCH64 }}
+      BIRTH_LINUX_X86_64: ${{ steps.generate-config.outputs.BIRTH_LINUX_X86_64 }}
+      BIRTH_WINDOWS_X86_64: ${{ steps.generate-config.outputs.BIRTH_WINDOWS_X86_64 }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
       - name: Generate config
         id: generate-config
-        uses: birth-software/github-config@v3
+        uses: birth-software/github-config@v5
   build_llvm:
     needs: generate-config
     permissions: write-all
@@ -31,16 +31,16 @@ jobs:
         CMAKE_BUILD_TYPE: ${{ fromJSON(needs.generate-config.outputs.BIRTH_CMAKE_BUILD_TYPES) }}
     runs-on: ${{ matrix.os }}
     env:
-      BIRTH_ORACLE_LINUX_IMAGE: ${{ needs.generate-config.outputs.BIRTH_ORACLE_LINUX_IMAGE }}
-      BIRTH_LINUX_IMAGE: ${{ needs.generate-config.outputs.BIRTH_LINUX_IMAGE }}
-      BIRTH_MACOS_IMAGE: ${{ needs.generate-config.outputs.BIRTH_MACOS_IMAGE }}
-      BIRTH_WINDOWS_IMAGE: ${{ needs.generate-config.outputs.BIRTH_WINDOWS_IMAGE }}
+      BIRTH_MACOS_AARCH64: ${{ needs.generate-config.outputs.BIRTH_MACOS_AARCH64 }}
+      BIRTH_LINUX_AARCH64: ${{ needs.generate-config.outputs.BIRTH_LINUX_AARCH64 }}
+      BIRTH_LINUX_X86_64: ${{ needs.generate-config.outputs.BIRTH_LINUX_X86_64 }}
+      BIRTH_WINDOWS_X86_64: ${{ needs.generate-config.outputs.BIRTH_WINDOWS_X86_64 }}
       CMAKE_STATIC_LIBRARY_PREFIX: lib
       CMAKE_STATIC_LIBRARY_SUFFIX: .a
     steps:
       - name: Maximize build space
-        if: matrix.os == env.BIRTH_LINUX_IMAGE
-        uses: AdityaGarg8/remove-unwanted-software@v4.1
+        if: matrix.os == env.BIRTH_LINUX_X86_64 || matrix.os == env.BIRTH_LINUX_AARCH64
+        uses: davidgmbb/remove-unwanted-software@master
         with:
           remove-android: 'true'
           remove-dotnet: 'true'
@@ -51,7 +51,7 @@ jobs:
           remove-cached-tools: 'true'
           remove-swapfile: 'true'
       - uses: actions/checkout@v4
-      - uses: birth-software/github-setup@v3
+      - uses: birth-software/github-setup@v5
       - name: Build
         shell: bash
         env:
