--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
         shell: bash
         env:
           CMAKE_BUILD_TYPE: ${{ matrix.CMAKE_BUILD_TYPE }}
+          BIRTH_ENABLE_CLANG: false
         run: ./build.sh
       - name: Upload LLVM artifact (7z)
         uses: actions/upload-artifact@v4
