--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,14 @@ jobs:
       matrix:
         os: ${{ fromJSON(needs.generate-config.outputs.BIRTH_GITHUB_TARGETS) }}
         CMAKE_BUILD_TYPE: ${{ fromJSON(needs.generate-config.outputs.BIRTH_CMAKE_BUILD_TYPES) }}
+        BIRTH_LLVM_ENABLE_ASSERTIONS: [ ON, OFF ]
+        exclude:
+          - BIRTH_LLVM_ENABLE_ASSERTIONS: ON
+            CMAKE_BUILD_TYPE: RelWithDebInfo
+          - BIRTH_LLVM_ENABLE_ASSERTIONS: ON
+            CMAKE_BUILD_TYPE: MinSizeRel
+          - BIRTH_LLVM_ENABLE_ASSERTIONS: OFF
+            CMAKE_BUILD_TYPE: Debug
     runs-on: ${{ matrix.os }}
     env:
       BIRTH_MACOS_AARCH64: ${{ needs.generate-config.outputs.BIRTH_MACOS_AARCH64 }}
@@ -37,6 +45,7 @@ jobs:
       BIRTH_WINDOWS_X86_64: ${{ needs.generate-config.outputs.BIRTH_WINDOWS_X86_64 }}
       CMAKE_STATIC_LIBRARY_PREFIX: lib
       CMAKE_STATIC_LIBRARY_SUFFIX: .a
+      BIRTH_LLVM_ENABLE_ASSERTIONS: ${{ matrix.BIRTH_LLVM_ENABLE_ASSERTIONS }}
     steps:
       - name: Maximize build space
         if: matrix.os == env.BIRTH_LINUX_X86_64 || matrix.os == env.BIRTH_LINUX_AARCH64
@@ -57,7 +66,7 @@ jobs:
         env:
           CMAKE_BUILD_TYPE: ${{ matrix.CMAKE_BUILD_TYPE }}
           BIRTH_ENABLE_CLANG: false
-          LLVM_VERSION: 20.1.3
+          LLVM_VERSION: 20.1.7
         run: ./build.sh
       - name: Upload LLVM artifact (7z)
         uses: actions/upload-artifact@v4
