--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -9,10 +9,12 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 project(bb)
 
+include_directories(BEFORE ./include)
+
 find_package(LLVM REQUIRED CONFIG)
 find_package(LLD REQUIRED CONFIG)
 
-add_library(llvm_bindings STATIC llvm.cpp)
+add_library(lld_bindings STATIC ./src/lld.cpp)
 
 find_library(LLD_COMMON NAMES liblldCommon.dylib lldCommon.lib lldCommon.a liblldCommon.dll.a liblldCommon.a PATHS ${LLVM_LIBRARY_DIRS} NO_DEFAULT_PATH)
 find_library(LLD_COFF NAMES liblldCOFF.dylib lldCOFF.lib lldCOFF.a liblldCOFF.dll.a liblldCOFF.a PATHS ${LLVM_LIBRARY_DIRS} NO_DEFAULT_PATH)
@@ -21,7 +23,7 @@ find_library(LLD_MACHO NAMES liblldMachO.dylib lldMachO.lib lldMachO.a liblldMac
 find_library(LLD_MINGW NAMES liblldMinGW.dylib lldMinGW.lib lldMinGW.a liblldMinGW.dll.a liblldMinGW.a PATHS ${LLVM_LIBRARY_DIRS} NO_DEFAULT_PATH)
 find_library(LLD_WASM NAMES liblldWasm.dylib lldWasm.lib lldWasm.a liblldWasm.dll.a liblldWasm.a PATHS ${LLVM_LIBRARY_DIRS} NO_DEFAULT_PATH)
 
-target_link_libraries(llvm_bindings PUBLIC
+target_link_libraries(lld_bindings PUBLIC
     ${LLVM_AVAILABLE_LIBS}
     ${LLD_COMMON}
     ${LLD_COFF}
